tests/ui/g-role-out-of-range.stderr
error[E0080]: evaluation panicked: role index must be < 16
 --> src/global.rs
  |
  |         crate::global::validate_send_contract::<From, To, M>();
  |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ evaluation of `hibana::g::send::<hibana::g::Role<16>, hibana::g::Role<0>, hibana::g::Msg<1, ()>, 0>::{constant#0}` failed inside this call
  |
note: inside `hibana::global::validate_send_contract::<Role<16>, Role<0>, Msg<1, ()>>`
 --> src/global.rs
  |
  |     validate_role_index(from);
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^
note: inside `hibana::global::validate_role_index`
 --> $RUST/core/src/panic.rs
  |
  = note: the failure occurred here
  |
 ::: src/global.rs
  |
  |         panic!("role index must be < 16");
  |         --------------------------------- in this macro invocation

note: erroneous constant encountered
 --> src/global.rs
  |
  | /     const {
  | |         crate::global::validate_send_contract::<From, To, M>();
  | |     }
  | |_____^

note: the above error was encountered while instantiating `fn send::<Role<16>, Role<0>, Msg<1, ()>, 0>`
 --> tests/ui/g-role-out-of-range.rs:4:13
  |
4 |     let _ = g::send::<g::Role<16>, g::Role<0>, g::Msg<1, ()>, 0>();
  |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
